--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,4 @@
-/target
-/classes
-/checkouts
-profiles.clj
-pom.xml
-pom.xml.asc
-*.jar
-*.class
-/.lein-*
-/.nrepl-port
-/resources/public/js
-/out
-/.repl
-*.log
-/.env
+.DS_Store
+target
+.nrepl-port
+figwheel_server.log
